Add service to customer home component to get stylists around the customer

--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -1,4 +1,4 @@
 <customer-navbar></customer-navbar>
 <customer-dropdown></customer-dropdown>
-<customer-booking-list></customer-booking-list>
+<customer-nearby-list [bookings]="bookings"></customer-nearby-list>
 <customer-map></customer-map>
