add payment button to customer home page

--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -23,7 +23,8 @@
   </div>
   <div *ngIf="!!bookingsDue">
     <div *ngFor="let booking of bookingsDue">
-      I OWE {{booking.name}} MONEY!!!!
+      Pay {{booking.name}} here:
+      <payment-input [stylistName]="booking.name"></payment-input>
     </div>
   </div>
 </div>
