--- a/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
+++ b/thesis-app/src/app/stylist/components/stylist-home/stylist-home.component.html
@@ -1,13 +1,13 @@
 <h2>Hello world</h2>
-<customer-navbar
-  [customerId]="stylistProfile.id"
-></customer-navbar>
+<customer-navbar></customer-navbar>
 Bookings:
-<div *ngFor="let booking of bookings; let i = index;">
-  <booking
-    [bookingInformation]="booking"
-    (confirmBooking)="confirmBooking($event, i)"
-    (deleteBooking)="deleteBooking($event, i)"
-    (completeBooking)="completeBooking($event, i)"
-  ></booking>
+<div *ngIf="bookings.length > 0">
+  <div *ngFor="let booking of bookings; let i = index;">
+    <booking
+      [bookingInformation]="booking"
+      (confirmBooking)="confirmBooking($event, i)"
+      (deleteBooking)="deleteBooking($event, i)"
+      (completeBooking)="completeBooking($event, i)"
+    ></booking>
+  </div>
 </div>
