--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.css
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-right: 1em;
+  padding-right: 0.5em;
 }
 
 .myList > * {
@@ -38,4 +38,17 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+*:focus {
+  outline: none;
+}
+
+.nav-item:hover {
+  cursor: pointer;
+  color: #e0dfd9;
+}
+
+.nav-item:active {
+  color: #a09f9b
 }
