--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -4,10 +4,10 @@
   </div>
   <div class="listContainer">
     <ul class="myList">
-      <li [routerLink]="['/appointments']"><h4>Appointments</h4></li>
-      <li [routerLink]="['/customerProfile']"><h4>{{name}}</h4></li>
-      <li [routerLink]="['/messages']"><h4>Messages</h4></li>
-      <li (click)="handleLogout()"><h4>Log out</h4></li>
+      <li [routerLink]="['/appointments']"><h4 class="nav-item">Appointments</h4></li>
+      <li [routerLink]="['/customerProfile']"><h4 class="nav-item">{{name}}</h4></li>
+      <li [routerLink]="['/messages']"><h4 class="nav-item">Messages</h4></li>
+      <li (click)="handleLogout()"><h4 class="nav-item">Log out</h4></li>
     </ul>
   </div>
 </div>
