Add more styling to login page

--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
@@ -2,7 +2,7 @@
   <registration-header class="header" headerText="Login Page"></registration-header>
   <div class="loginWrapper">
     <div class="flexItem">
-      <p>At It's Cut Time, we aim to offer a clean and intuitive communication platform for hairstylists and consumers. If you are looking for haircare at your doorstep, we are excited to introduce tools that you can use for free! After matching with a stylist, you can reachout to them via our integrated messaging service and set-up an appointment with them. If you are a stylist, we offer you the tools to manage your appointments efficiently. Chat with customers easily using our massaging system to ensure their experience is always improved upon. Payments are processed through Stripe for hassle-free direct deposits.
+      <p>At It's Cut Time, we aim to offer a clean and intuitive communication platform for hairstylists and consumers. After matching with a stylist, you can reachout to them via our integrated messaging service and set-up an appointment with them. If you are a stylist, we offer you the tools to manage your appointments efficiently. Chat with customers easily using our massaging system to ensure their experience is always improved upon. Payments are processed through Stripe for hassle-free direct deposits.
        </p>
     </div>
     <div class="flexItem loginButtons">
@@ -25,7 +25,7 @@
         <div class="btnContainer">
           <button
             type="submit"
-          >Sign In</button>
+          >SIGN IN</button>
         </div>
       </form>
     </div>
