--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.css
@@ -13,9 +13,9 @@
 
 .header {
   height: 25%;
-  padding-top: 8em;
-  margin-left: 2em;
-  margin-right: 2em;
+  padding-top: 11rem;
+  margin-left: 2rem;
+  margin-right: 2rem;
   width: 85%;
   align-self: center;
 }
@@ -23,10 +23,10 @@
 .loginWrapper {
   display: flex;
   flex-direction: row;
-  margin-top: 1em;
-  margin-left: 2em;
-  margin-right: 2em;
-  height: 35vh;
+  margin-top: 7em;
+  /*margin-left: 2em;*/
+  margin-right: 7em;
+  height: 40vh;
   width: 85%;
   align-self: center;
   justify-content: center;
@@ -44,18 +44,36 @@
   margin: 0 1em;
 }
 
+.flexItem p {
+  font-family: "Avenir Next";
+  color: #E9E7E7;
+  font-size: 18px;
+  width: 80%;
+}
+
 .flexItem input {
+  font-family: "Avenir Next";
+  font-weight: 600;
   background-color: white;
   color: black;
+  width: 200%;
+  height: 4rem;
 }
 
 .loginButtons {
   background: rgba(255,255,255,0.4);
-  padding: 1em;
-  padding-left: 6em;
-  padding-right: 6em;
-  height: 85%;
-  border-radius: 10px;
+  /*padding: 1em;*/
+  /*margin-bottom: ;*/
+  /*padding-left: 6em;*/
+  padding-right: 12em;
+  height: 100%;
+  border-radius: 4px;
+}
+
+.loginButtons h5 {
+  font-family: "Avenir Next";
+  font-weight: 600;
+  font-size: 18px;
 }
 
 .flexItem * > {
@@ -67,6 +85,8 @@
   display: flex;
   justify-content: flex-end;
   height: 85%;
+  width: 100%;
+  margin-right: 3em;
 }
 
 p {
@@ -75,19 +95,44 @@ p {
 
 button {
   background-color: #F9B71A;
-  width: 60%;
+  width: 100%;
+  height: 60%;
   border-radius: 20px;
   margin-top: 1em;
   border: 1px solid #F9B71A;
+}
+
+button:hover {
+  background-color: #ffc232;
+  border: 1px solid #ffc232;
+}
+
+button:active {
+  background-color: #d39b15;
+  border: 1px solid #d39b15;
+  color: #ffe62d;
+}
+
+button:focus {
+  outline: none;
+}
+
+h6 {
+  color: #ff6d6d;
 }
 
 a {
   align-self: flex-end;
   margin-right: 14em;
   color: #F9B71A;
-  border-bottom: 1px solid #F9B71A;
+  font-family: "Avenir Next";
+  font-weight: 600;
+  font-size: 14px;
+  /*border-bottom: 1px solid #F9B71A;*/
 }
 
 a:hover {
   color: white;
+  /*border-bottom: 1px solid white;*/
+  text-decoration: none;
 }
