--- a/thesis-app/src/app/customer/components/booking/booking.component.css
+++ b/thesis-app/src/app/customer/components/booking/booking.component.css
@@ -61,19 +61,48 @@
   padding-top: 1em;
   /*border: 2px solid red;*/
   /*margin-bottom: 1em;*/
+  height: 40%;
+  width: 47%;
+  margin: 1em;
 }
 
-.buttonContainer > * {
+button:focus {
+  outline: none;
+}
+
+.btn-yellow {
   background-color: #F9B71A;
   color: #ffffff;
-  height: 20%;
-  width: 47%;
-  /*align-self: flex-end;*/
-  /*margin-bottom: 1em;*/
-  /*margin-left: 1em;*/
-  margin: 1em;
+  border: 2px solid #F9B71A;
   border-radius: 23px;
-  border: 1px solid #F9B71A;
+  width: 47%;
+  margin-left: 8em;
+}
+
+.btn-yellow:hover {
+  background-color: #ffc232;
+  border: 2px solid #ffc232;
+}
+
+.btn-cancel {
+  background-color: white;
+  color: #F9B71A;
+  border: 2px solid #F9B71A;
+  border-radius: 23px;
+  width: 47%;
+  /*margin-left: 14em;*/
+}
+
+.btn-cancel:hover {
+  background-color: #ffe096;
+  border: 2px solid #F9B71A;
+  color: #f7b109;
+}
+
+.btn-invis {
+  background: transparent;
+  border: none !important;
+  color: white;
 }
 
 .paymentInput {
@@ -82,5 +111,9 @@
   align-items: center;
   flex: 1 1 30%;
   padding-top: 1em;
+  width: 47%;
   /*border: 2px solid red;*/
 }
+
+
+
