--- a/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.html
+++ b/thesis-app/src/app/customer/components/close-to-you/close-to-you.component.html
@@ -10,6 +10,6 @@
     </div>
   </div>
   <div class="buttonContainer">
-    <button>Manage</button>
+    <button>Profile</button>
   </div>
 </div>
