--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="inputContainer">
         <input
-          placeholder="Enter your location"
+          placeholder="Enter your location..."
           type="search"
           [(ngModel)]="location"
           (keypress)="updateCloseToYou(location)"
