--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -4,8 +4,8 @@
   <div class="subHeader">
     <h3>My Profile</h3>
     <div class="buttonContainer">
-      <button (click)="toggleMessageModal()">Message</button>
-      <button (click)="toggleBookingModal()">Book Appointment</button>
+      <button class="btn-cancel" (click)="toggleBookingModal()">Book Appointment</button>
+      <button class="btn-yellow" (click)="toggleMessageModal()">Message</button>
     </div>
   </div>
 
