--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -1,8 +1,19 @@
 .componentWrapper {
   height: 100vh;
-  font-family: 'Montserrat', sans-serif;
+  /*font-family: 'Montserrat', sans-serif;*/
+  font-family: 'Avenir Next';
   display: flex;
   flex-direction: column;
+}
+
+*:focus {
+  outline: none;
+}
+
+h3 {
+  font-weight: bold;
+  font-size: 30px;
+  margin-left: 5em;
 }
 
 .subHeader {
@@ -17,19 +28,49 @@
   margin-left: 2em;
   margin-right: 2em;
 }
+
 .buttonContainer {
   flex: 1 1 50%;
   display: flex;
   justify-content: flex-end;
 }
+
+button:focus {
+  outline: none;
+}
+
 .buttonContainer button {
+  width: 15%;
+  height: 20%;
+  margin-right: 3em;
+}
+
+.btn-cancel {
+  background-color: white;
+  color: #F9B71A;
+  border: 2px solid #F9B71A;
+  border-radius: 23px;
+  width: 47%;
+}
+
+.btn-cancel:hover {
+  background-color: #ffe096;
+  border: 2px solid #F9B71A;
+  color: #f7b109;
+}
+
+.btn-yellow {
   background-color: #F9B71A;
   color: #ffffff;
-  border-radius: 20px;
-  width: 25%;
-  height: 10%;
-  margin-right: 6em;
-  border: 1px solid #F9B71A;
+  border: 2px solid #F9B71A;
+  border-radius: 23px;
+  width: 47%;
+  margin-left: 5em;
+}
+
+.btn-yellow:hover {
+  background-color: #ffc232;
+  border: 2px solid #ffc232;
 }
 
 .profileContainer {
@@ -149,6 +190,10 @@
   margin-bottom: 1em;
 }
 
+.modalHeader div {
+  cursor: pointer;
+}
+
 .formContainer {
   flex: 1 1 100%;
   height: 90%;
@@ -171,8 +216,13 @@ textarea {
   color: white;
   margin-right: .5em;
   margin-top: 1em;
-  border-radius: 35px;
-  border: 1px solid #F9B71A;
+  border-radius: 23px;
+  border: 2px solid #F9B71A;
+}
+
+.btnContainer button:hover {
+  background-color: #ffc232;
+  border: 2px solid #ffc232;
 }
 
 .formContainer2 {
@@ -231,7 +281,11 @@ textarea {
   color: white;
   margin-right: .5em;
   margin-top: 1em;
-  border-radius: 35px;
-  border: 1px solid #F9B71A;
+  border-radius: 23px;
+  border: 2px solid #F9B71A;
 }
 
+.ultimoContainer > *:hover {
+  background-color: #ffc232;
+  border: 2px solid #ffc232;
+}
