--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.html
@@ -4,8 +4,8 @@
   <div class="subHeader">
     <h2>My Profile</h2>
     <div class="buttonContainer">
-      <button (click)="toggleModal()">Edit</button>
-      <button (click)="handleDeleteAccount()">Delete</button>
+      <button class="btn-cancel" (click)="toggleModal()">Edit</button>
+      <button class="btn-yellow" (click)="handleDeleteAccount()">Delete</button>
     </div>
   </div>
 
