--- a/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
+++ b/thesis-app/src/app/customer/components/customer-profile/customer-profile.component.css
@@ -5,6 +5,10 @@
   flex-direction: column;
 }
 
+*:focus {
+  outline: none;
+}
+
 .subHeader {
   height: 18%;
   width: 100%;
@@ -24,14 +28,35 @@
   justify-content: flex-end;
   padding-right: 3em;
 }
+
 .buttonContainer button {
-  background-color: #F9B71A;
-  color: #ffffff;
-  border-radius: 20px;
+  border-radius: 23px;
   width: 24%;
   margin: .5em;
   height: 2.5em;
-  border: 1px solid #F9B71A;
+}
+
+.btn-yellow {
+  background-color: #F9B71A;
+  color: #ffffff;
+  border: 2px solid #F9B71A;
+}
+
+.btn-yellow:hover {
+  background-color: #ffc232;
+  border: 2px solid #ffc232;
+}
+
+.btn-cancel {
+  background-color: white;
+  color: #F9B71A;
+  border: 2px solid #F9B71A;
+}
+
+.btn-cancel:hover {
+  background-color: #ffe096;
+  border: 2px solid #F9B71A;
+  color: #f7b109;
 }
 
 .profileContainer {
@@ -149,6 +174,10 @@
   color: #F9B71A;
 }
 
+.modalHeader div {
+  cursor: pointer;
+}
+
 
 .formContainer {
   flex:1 1 100%;
@@ -221,12 +250,17 @@
 }
 
 .btnContainer button {
-  border: 1px solid #F9B71A;
+  border: 2px solid #F9B71A;
   width: 20%;
   background-color: #F9B71A;
   color: white;
   margin-right: 2em;
   margin-top: 1em;
-  border-radius: 35px;
+  border-radius: 23px;
   align-self: flex-end;
+}
+
+.btnContainer button:hover {
+  background-color: #ffc232;
+  border: 2px solid #ffc232;
 }
