--- a/thesis-app/src/app/customer/components/booking/booking.component.html
+++ b/thesis-app/src/app/customer/components/booking/booking.component.html
@@ -5,10 +5,10 @@
     </div>
   </div>
   <div class="infoContainer">
-    <h5>{{name}}</h5>
-    <h6 class="glyphicon glyphicon-time"> Date: {{time}}</h6>
-    <h6 class="glyphicon glyphicon-earphone"> Contact: {{phoneNumber}}</h6>
-    <h6 class="glyphicon glyphicon-envelope"> Location: {{location}}</h6>
+    <h4>{{name}}</h4>
+    <h6> Date: {{time}}</h6>
+    <h6> Contact: {{phoneNumber}}</h6>
+    <h6> Location: {{location}}</h6>
   </div>
   <div class="buttonContainer">
     <button class="btn-invis" *ngIf="!!isCancel">asdfd</button>
