--- a/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
+++ b/thesis-app/src/app/registration/components/signup-stylist/signup-stylist.component.css
@@ -9,6 +9,10 @@
   font-family: 'Montserrat', sans-serif;
 }
 
+*:focus {
+  outline: none;
+}
+
 .header {
   height: 25%;
   padding-top: 8em;
@@ -121,8 +125,13 @@
 
 button {
   background-color: #F9B71A;
-  border-radius: 20px;
+  border-radius: 23px;
   width: 23%;
   margin-right: 4em;
-  border: 1px solid #F9B71A;
+  border: 2px solid #F9B71A;
+}
+
+button:hover {
+  background-color: #ffc232;
+  border: 2px solid #ffc232;
 }
