Fix appointments header

--- a/thesis-app/src/app/customer/components/landing/landing.component.html
+++ b/thesis-app/src/app/customer/components/landing/landing.component.html
@@ -93,6 +93,9 @@
 
   <!-- Stylist Landing -->
   <div *ngIf="profile.type===0">
+    <div class="apptContainer">
+      <h2>Appointments</h2>
+    </div>
     <div class="confirmedContainer">
       <h4>Confirmed</h4>
 <!--         <div *ngIf="profile.confirmedBookings.length === 0 || !profile.confirmedBookings">
